package edu.fiuba.algo3.modelo.Unidades;

public class Tierra implements Superficie{
    @Override
    public boolean esPosibleAgregar(Unidad unidad) {;
        return true;
    }
}
